--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             --field-bg-color: rgb(100, 100, 100);
             --field-color: rgb(250, 250, 250);
 
+            --field-border-color-focus: aquamarine;
+
             --field-border-color-disabled: rgb(100, 100, 100);
             --field-bg-color-disabled: rgb(80, 80, 80);
             --field-color-disabled: rgb(250, 250, 250);
@@ -52,6 +54,8 @@
             --field-border-color: rgb(180, 180, 180);
             --field-bg-color: rgb(240, 240, 240);
             --field-color: rgb(0, 0, 0);
+
+            --field-border-color-focus: aquamarine;
 
             --field-border-color-disabled: rgb(180, 180, 180);
             --field-bg-color-disabled: rgb(220, 220, 220);
@@ -100,8 +104,7 @@
 
         input:focus {
             outline: none;
-            /* background-color: var(--field-bg-color-focus); */
-            border-bottom-color: aquamarine;
+            border-bottom-color: var(--field-border-color-focus);
         }
 
 
