add checking for updates fix urls

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="canonical" href="https://artemegion.github.io/tablica-odlewnia/" />
     <link rel="manifest" href="/tablica-odlewnia/manifest.webmanifest" />
 
-    <link rel="icon" href="assets/icon.svg" />
-    <link rel="stylesheet" href="styles/index.css" />
+    <link rel="icon" href="/tablica-odlewnia/assets/icon.svg" />
+    <link rel="stylesheet" href="/tablica-odlewnia/styles/index.css" />
 
     <title>Tablica odlewnia</title>
 </head>
@@ -19,8 +19,8 @@
         <div class="app-titlebar">
             <div class="app-title">
                 <span>Tablica SFM</span>
+                <span id="app-updated-icon" style="opacity: 0; pointer-events: none; float: left; font-size: 1.3em;">⬇️</span>
                 <span id="theme-selector" style="float: right; font-size: 1.3em;">🌘</span>
-                <span style="float: left; font-size: 1.3em; opacity: 0;">🌘</span>
             </div>
             <div class="shift">Zmiana <span id="shift-this-week">?</span></div>
         </div>
@@ -129,10 +129,11 @@
     </script>
 
     <!-- app -->
-    <script src="js/cells.js"></script>
-    <script src="js/collapsible.js"></script>
-    <script src="js/current-shift.js"></script>
-    <script src="js/theme-selector.js"></script>
+    <script src="/tablica-odlewnia/js/cells.js"></script>
+    <script src="/tablica-odlewnia/js/collapsible.js"></script>
+    <script src="/tablica-odlewnia/js/current-shift.js"></script>
+    <script src="/tablica-odlewnia/js/theme-selector.js"></script>
+    <script src="/tablica-odlewnia/js/updates.js"></script>
 </body>
 
 </html>
