+ check for updates when app starts + auto download and apply updates in background + add some more comments + more error handling

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+
     <link rel="canonical" href="https://artemegion.github.io/tablica-odlewnia/" />
     <link rel="manifest" href="/tablica-odlewnia/manifest.webmanifest" />
 
@@ -18,7 +22,7 @@
     <div class="app-container flex-col">
         <div class="app-titlebar">
             <div class="app-title">
-                <span>Tablica SFM</span>
+                <span>Tablica odlewnia</span>
                 <span id="app-updated-icon" style="opacity: 0; pointer-events: none; float: left; font-size: 1.3em;">⬇️</span>
                 <span id="theme-selector" style="float: right; font-size: 1.3em;">🌘</span>
             </div>
@@ -129,6 +133,8 @@
     </script>
 
     <!-- app -->
+    <script>var DEBUG = false;</script>
+    <script src="/tablica-odlewnia/js/force-slash-at-end-of-url.js"></script>
     <script src="/tablica-odlewnia/js/cells.js"></script>
     <script src="/tablica-odlewnia/js/collapsible.js"></script>
     <script src="/tablica-odlewnia/js/current-shift.js"></script>
