changed how app update notification is displayed

--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
 
 <body>
     <div class="app-container flex-col">
+        <div id="app-update-notif" class="top-notif" style="display: none; pointer-events: none;">Dotknij tutaj aby zacząć używać najnowszej wersji aplikacji.</div>
+
         <div class="app-titlebar">
             <div class="app-title">
                 <span>Tablica odlewnia</span>
-                <span id="app-updated-icon" style="opacity: 0; pointer-events: none; float: left; font-size: 1.3em;">⬇️</span>
+                <span style="opacity: 0; pointer-events: none; float: left; font-size: 1.3em;">⬇️</span>
                 <span id="theme-selector" style="float: right; font-size: 1.3em;">🌘</span>
             </div>
             <div class="shift">Zmiana <span id="shift-this-week">?</span></div>
